<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cliqdbase.app._activities.ChangeProfilePictureActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/change_pic_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:contentDescription="@string/profile_image_change"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:id="@+id/profile_image_selected"
        android:layout_below="@+id/change_pic_title"
        android:layout_centerHorizontal="true"

        />

    <ProgressBar android:id="@+id/current_profile_image_downloading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/change_pic_title"
        android:layout_marginTop="150dp"
        />

    <ImageView
        android:contentDescription="@string/profile_image_edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_image_edit_button"
        android:layout_alignBottom="@+id/profile_image_selected"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        /> <!-- android:background="@drawable/pencil_edit" -->


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_picture_cancel_button"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/upload_image_button"
        android:layout_toStartOf="@+id/upload_image_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image_button"
        android:id="@+id/upload_image_button"
        android:layout_alignTop="@+id/change_picture_cancel_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
